# wander-engine

./: .gitignore  Cargo.toml  LICENSE
src/: behavior.rs  data.rs  lib.rs  util.rs  world.rs
src/world/: agents.rs  entities.rs  layout.rs
