[package]
name = "wander-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
coupled = { git = "https://github.com/phaylon/coupled", version = "0.1.0" }
either = "1.8.1"
fnv = "1.0.7"
once_cell = "1.17.1"
reagenz = { git = "https://github.com/phaylon/reagenz", version = "0.1.0" }
smallvec = { version = "1.10.0", features = ["const_generics"] }
smol_str = "0.1.24"
treelang = { git = "https://github.com/phaylon/treelang", version = "0.1.0" }
