[package]
name = "wander-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
coupled = { git = "https://github.com/phaylon/coupled", version = "0.1.0" }
derivative = "2.2.0"
either = "1.8.1"
float-ord = "0.3.2"
fnv = "1.0.7"
once_cell = "1.17.1"
reagenz = { git = "https://github.com/phaylon/reagenz", version = "0.1.0" }
smallvec = { version = "1.10.0", features = ["const_generics"] }
smol_str = "0.1.24"
src-ctx = { git = "https://github.com/phaylon/src-ctx", version = "0.1.0" }
thiserror = "1.0.40"
treelang = { git = "https://github.com/phaylon/treelang", version = "0.1.0" }
